--- a/Task/task-2/.local/install/task-2.Mapper.json
+++ b/Task/task-2/.local/install/task-2.Mapper.json
@@ -1,1 +1,1 @@
-["C:\\Users\\Mesba_RPA\\Documents\\Task\\task-2\\Main.xaml"]
+["C:\\Users\\Mesba_RPA\\Documents\\Task\\task-2\\main1.xaml","C:\\Users\\Mesba_RPA\\Documents\\Task\\task-2\\Main.xaml","C:\\Users\\Mesba_RPA\\Documents\\Task\\task-2\\other.xaml","C:\\Users\\Mesba_RPA\\Documents\\Task\\task-2\\Sequence.xaml"]
