--- a/Task/task-1.1/project.json
+++ b/Task/task-1.1/project.json
@@ -7,6 +7,7 @@
     "UiPath.Excel.Activities": "[2.23.0-preview]",
     "UiPath.Mail.Activities": "[1.21.1]",
     "UiPath.System.Activities": "[23.12.0-preview]",
+    "UiPath.Tableau.Activities": "[1.3.0]",
     "UiPath.Testing.Activities": "[23.12.0-preview]",
     "UiPath.UIAutomation.Activities": "[23.10.8]"
   },
